# agent-telemetry-dashboard

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/: sample_telemetry.csv  sample_telemetry.json
deploy/: collector.env.example  collector.service
docs/: architecture.md  data_ingestion.md  integrations.md  memory_observability.md  multi_agent_observability.md  production_ingestion.md  roadmap.md  sdk.md  session_exploration.md  telemetry_analytics.md  telemetry_schema.md  trace_store.md
examples/: crewai_import_example.py  langchain_import_example.py  openai_agents_import_example.py  sdk_trace_store_example.py
src/agent_telemetry_dashboard/: __init__.py  adapters.py  analytics.py  collector.py  collector_server.py  datasets.py  explorer.py  export.py  filters.py  generator.py  import_history.py  import_preview.py  import_store.py  ingestion.py  ingestion_stats.py  loader.py  memory_observability.py  metrics.py  migrations.py  models.py  multi_agent.py  sample_data.py  sdk.py  trace_store.py
tests/: test_adapters.py  test_analytics.py  test_collector.py  test_explorer.py  test_export.py  test_filters.py  test_generator.py  test_import_history.py  test_import_preview.py  test_ingestion.py  test_ingestion_adapters_integration.py  test_ingestion_stats.py  test_loader.py  test_memory_export.py  test_memory_observability.py  test_memory_observability_empty_states.py  test_metrics.py  test_multi_agent.py  test_sdk.py  test_sdk_transport.py  test_trace_store.py
