[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-telemetry-dashboard"
version = "0.1.0"
description = "A Streamlit dashboard for visualizing telemetry from memory-enabled and tool-using AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aditya" }]
dependencies = [
    "pandas>=2.2",
    "plotly>=5.24",
    "pydantic>=2.8",
    "streamlit>=1.38",
]

[project.scripts]
generate-agent-telemetry = "agent_telemetry_dashboard.generator:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
